# techpulse

./: README.md  next.config.ts  package-lock.json  package.json
app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
app/api/feeds/: route.ts  route.web.ts
app/bookmarks/: page.tsx
app/category/[slug]/: page.tsx
components/: article-card.tsx  article-grid.tsx  article-list-item.tsx  article-skeleton.tsx  aside-rail.tsx  back-to-top.tsx  bookmark-button.tsx  bookmarks-client.tsx  category-bar.tsx  category-page-client.tsx  client-shell.tsx  dense-row.tsx  dispatch-hero.tsx  empty-state.tsx  footer.tsx  header.tsx  home-client.tsx  lead-story.tsx  page-heading.tsx  providers.tsx  search-command.tsx  section-tabs.tsx  sidebar.tsx  theme-toggle.tsx  ticker-tape.tsx  top-stories.tsx  trending-sidebar.tsx
hooks/: articles-context.tsx  use-articles.ts  use-bookmarks.ts
lib/: categorize.ts  feeds.ts  open-url.ts  site.ts  sources.ts  tauri.ts  types.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: feeds.rs  lib.rs
