[package]
name = "techpulse"
version = "1.0.0"
description = "TechPulse — Tech News Aggregator"
authors = ["TechPulse"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
reqwest = { version = "0.12", features = ["rustls-tls", "json"] }
rss = "2"
atom_syndication = "0.12"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
regex = "1"
futures = "0.3"
tauri-plugin-opener = "2.5.3"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
